[package]
name = "hashell"
version = "0.1.0"
edition = "2021"
authors = ["Grisshink"]
description = "MRSL's hashing function ported to rust"
repository = "https://github.com/Grisshink/hashell"
license = "MIT"
keywords = ["crypto", "hash"]
categories = ["cryptography"]

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "hashell-stress"
harness = false
